	* arch/arm/src/armv7-m/nvic.h:  Add bit definitions for the AIRCR
	  register.
	* drivers/input/ads7843.c:  Need semaphore protection in logic
	  that samples the position.
	* drivers/lcd/ssd1289.c:  On some platforms we are unable to
	  read the device ID -- reason unknown; workaround in place.
	* drivers/input/ads7843.c:  Add thresholding options and an
	  option to swap X and Y positions.  Fix some logic errors in
	  the SPI locking/selecting logic.
	* arch/arm/src/armv7-m/up_systemreset.c:  Add logic to reset
	  the Cortex-Mx using the AIRCR register.  Contributed by Darcy
	  Gong.
	* arch/arm/src/stm32/up_eth.c:  Add logic specifically for the
	  DM9161 PHY.  If the DM9161 failed to initialize, then use the
	  up_sysemreset() logic to reset the MCU.  Contributed by Darcy
	  Gong.
	* arch/arm/src/stm32/stm32_gpio.c:  Add missing logic to set bit
	  for SPI3 remap.  This fixes the XPT2046 touchscreen driver using
	  drivers/input/ads7843.c
	* configs/shenzhou/src/up_ssd1289.c:  Fix naming error in
	  conditional compilation.
	* configs/shenzhou/nxwm/defconfig:  Disable reading from the LCD.
	  This does not work.  The hardware and the driver support the
	  capability, but there is some bug that causes memory corruption.
	  The work around for now:  Just disable reading from the LCD.
	* drivers/lcd/ssd1289.c:  Add some logic to reduce the amount of
	  output when CONFIG_DEBUG_LCD is enabled.
	* configs/shenzhou/nxwm/defconfig:  Bug found and fixed... The
	  original configuration had too much stuff turned on.  Reducing
	  stack sizes, some features, and buffer sizes made the
	  configuration reliable (Reading from the LCD is still disabled).
	* net/uip/uip_icmpping.c:  Fix problem that prevented ping from
	  going outside of local network.  Submitted by Darcy Gong

6.23 2012-09-29 Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32/stm32_rng.c, chip/stm32_rng.h, and other files:
	  Implementation of /dev/random using the STM32 Random Number
	  Generator (RNG).